<resources>
    <string name="app_name">Foodie Order</string>
    <string name="loginName">Username</string>
    <string name="loginEmail">Email</string>
    <string name="signOutBtn">Sign Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="resBtn">Add Resturant</string>
    <string name="menuBtn">Add Menu</string>
    <string name="txtLogout">LOG OUT</string>
    <string name="txtRestaurant">Restaurant</string>
    <string name="txtRedFragment">RED FRAGMENT HERE...</string>
    <string name="txtGreenFragment">I AM GREEN</string>
    <string name="txtLogoutFragment">YOU\'RE SUCCESSFULLY LOGGED OUT!!!</string>
    <string name="txtViewSignIn">Sign In</string>
    <string name="loginDesc">background picture</string>
    <string name="googleDesc">google sign in</string>
    <string name="txtViewLoginAlt">or Sign in with</string>
    <string name="emailDesc">Please Enter Email</string>
    <string name="passwordDesc">Please Enter Password</string>
    <string name="pwConfirmDesc">Please Confirm Password</string>
    <string name="usernameDesc">Please Enter Username</string>
    <string name="txtLogin">Login</string>
    <string name="tabLayoutDesc">tab for login and signup</string>
    <string name="upload_btn">Upload Image</string>
    <string name="Select_Image">Select Image</string>
    <string name="txtResNameLayout">res name</string>
    <string name="txtRes1Name">Ken\'s Kitchen</string>
    <string name="txtNamePlayout">name</string>
    <string name="txtPriceLayout">price</string>
    <string name="txtViewName">name</string>
    <string name="txtViewPrice">price</string>

    <string name="btnAddToCart">Add</string>
    <string name="txtRes2Name">Big Burgers</string>
    <string name="txtNameRes2">Big Burgers</string>
    <string name="editQuantityHint">1</string>
    <string name="editNumQuantity" />
    <string name="txtNameRes3">Pizza Huts</string>
    <string name="addRes">Add Restaurant</string>
    <string name="resNameInput">Enter Rrestaurant Name</string>
    <string name="ResLocation">Location</string>
    <string name="selectResImg">Select Restaurant Image</string>
    <string name="addResBtn">Add</string>
    <string name="txtViewOrder">Thank you for ordering</string>
    <string name="btnPlaceOrder">Place Order</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="location">Location</string>
    <string name="add_dish">Add dish</string>
    <string name="dishPrice">Dish Price</string>
    <string name="dishName">Dish Name</string>

    <string-array name="quantityStrArr">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10(Max)</item>
    </string-array>

</resources>