<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <TextView
        android:id="@+id/addResTitleTxtview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/addRes"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTxtResName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addResTitleTxtview"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/resNameInput"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTxtLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTxtResName"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/ResLocation"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <ImageView
        android:id="@+id/imageViewPreview"
        android:layout_width="275dp"
        android:layout_height="275dp"
        android:layout_below="@+id/editTxtLocation"
        android:layout_marginTop="18dp"
        tools:src="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnSelectImage"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewPreview"
        android:layout_marginTop="3dp"
        android:text="@string/selectResImg" />

    <Button
        android:id="@+id/BtnAddRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSelectImage"
        android:layout_marginTop="96dp"
        android:text="@string/addResBtn" />

</RelativeLayout>
